--- a/css/main.css
+++ b/css/main.css
@@ -666,6 +666,15 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.formSection {
+  background: url(../images/home_banner.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  background-repeat: repeat-x;
+  color: var(--light);
+}
+
 .formSection .row h1 {
   padding: 1rem 0;
   text-align: center;
@@ -677,5 +686,22 @@ h1, h2, h3, h4, h5, h6 {
 .formSection .submitBtn {
   background-color: #DE5B2C;
   color: var(--light);
+}
+
+.formSection .divArea {
+  min-height: 200px;
+  height: auto;
+  width: 100%;
+  background-color: #f2f2f2;
+  margin-bottom: 1rem;
+  border-radius: 5px;
+}
+
+.formSection .divArea input[type='text'] {
+  background: none;
+  height: 100%;
+  width: 100%;
+  outline: none;
+  border: none;
 }
 /*# sourceMappingURL=main.css.map */
