--- a/css/_formSection.scss
+++ b/css/_formSection.scss
@@ -15,18 +15,13 @@
         color: var(--light);
     }
     .divArea{
-        min-height: 200px;
-        height: auto;
         width: 100%;
         background-color: $light_white;
         margin-bottom: 1rem;
         border-radius: 5px;
-        input[type='text']{
-            background: none;
-            height: 100%;
-            width: 100%;
-            outline: none;
-            border: none;
-        }
+    }
+    .showDataIngredients{
+        height: 200px;
+        overflow: scroll;
     }
 }
