--- a/css/main.css
+++ b/css/main.css
@@ -667,11 +667,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .formSection {
-  background: url(../images/home_banner.jpg);
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
-  background-repeat: repeat-x;
+  background: #ffffff url("../images/home_banner.jpg") no-repeat fixed;
   color: var(--light);
 }
 
@@ -689,19 +685,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .formSection .divArea {
-  min-height: 200px;
-  height: auto;
   width: 100%;
   background-color: #f2f2f2;
   margin-bottom: 1rem;
   border-radius: 5px;
 }
 
-.formSection .divArea input[type='text'] {
-  background: none;
-  height: 100%;
-  width: 100%;
-  outline: none;
-  border: none;
+.formSection .showDataIngredients {
+  height: 200px;
+  overflow: scroll;
 }
 /*# sourceMappingURL=main.css.map */
