--- a/css/_formSection.scss
+++ b/css/_formSection.scss
@@ -1,5 +1,8 @@
-.formSection{
+.addBG{
     background: #ffffff url("../images/home_banner.jpg") no-repeat fixed;
+    background-size: cover;
+}   
+.formSection{
     color: var(--light);
     .row{
         h1{
