--- a/css/_formSection.scss
+++ b/css/_formSection.scss
@@ -1,6 +1,7 @@
-.addBG{
+.firstForm{
     background: #ffffff url("../images/home_banner.jpg") no-repeat fixed;
     background-size: cover;
+    padding-bottom: 30vh;
 }   
 .formSection{
     color: var(--light);
