--- a/css/_getAllDishs.scss
+++ b/css/_getAllDishs.scss
@@ -4,7 +4,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    padding-bottom: 51vh;
+    padding: 60vh auto;
     .row{
         h1{
             padding:  1rem 0;
