--- a/css/main.css
+++ b/css/main.css
@@ -714,7 +714,7 @@ h1, h2, h3, h4, h5, h6 {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding-bottom: 51vh;
+  padding-bottom: 60vh;
 }
 
 .showtimedata .row h1 {
@@ -725,5 +725,28 @@ h1, h2, h3, h4, h5, h6 {
   color: var(--light);
   display: block;
   text-align: center;
+}
+
+.footer {
+  background: url(../images/footer-bg.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 2rem 0;
+}
+
+.footer img {
+  height: 120px;
+  padding: 0.5rem;
+  border-radius: 20px;
+}
+
+.copyright {
+  background: #1b1919;
+}
+
+.copyright p {
+  font-weight: normal !important;
+  font-size: 14px;
 }
 /*# sourceMappingURL=main.css.map */
