--- a/css/main.css
+++ b/css/main.css
@@ -727,6 +727,10 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
+.showtimedata .overFlow {
+  overflow: auto;
+}
+
 .footer {
   background: url(../images/footer-bg.jpg);
   background-position: center;
